# optimization

./: CMakeLists.txt  README.md
inc/: edge.h  loss.h  problem.h  vertex.h
src/: edge.cpp  loss.cpp  problem.cpp  vertex.cpp
test/: CurveFitting.cpp
